<resources>
    <string name="app_name">GithubUserUpdate</string>
    <string name="username_user">Username</string>
    <string name="name_user">Nama User</string>
    <string name="location_user">Alamat User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Input username</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="_0">0</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="image_avatar_desc">Image Avatar</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="search">search</string>
    <string name="refresh">refresh</string>
</resources>