<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:id="@+id/detailParent"
    tools:context=".DetailUser"
    android:background="#141E27">

    <ImageView
        android:id="@+id/detail_img_ava"
        android:layout_width="150dp"
        android:layout_height="150dp"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/image_avatar_desc" />

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toBottomOf="@id/detail_img_ava"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:text="@string/username"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toBottomOf="@id/detail_username"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toBottomOf="@id/detail_name"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="1dp"
        android:padding="1dp"
        android:textAlignment="center"
        android:gravity="center_horizontal">

        <!--  FOLOWERS  -->
        <LinearLayout
            android:id="@+id/palce_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="1dp"
            android:textAlignment="center"
            android:gravity="center"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/place_following">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:text="@string/followers"
                android:textAlignment="center"
                android:padding="2dp"/>
            <TextView
                android:id="@+id/detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/_0"
                android:layout_marginTop="1dp"/>
        </LinearLayout>

        <!--  FOLLOWING  -->
        <LinearLayout
            android:id="@+id/place_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="1dp"
            android:textAlignment="center"
            android:gravity="center"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/palce_followers"
            card_view:layout_constraintEnd_toStartOf="@id/place_repository">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:text="@string/following"
                android:textAlignment="center"
                android:padding="2dp"/>
            <TextView
                android:id="@+id/detail_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/_0"
                android:layout_marginTop="1dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <!--  REPOSITORY  -->
        <LinearLayout
            android:id="@+id/place_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="1dp"
            android:textAlignment="center"
            android:gravity="center"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/place_following"
            card_view:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:text="@string/repository"
                android:textAlignment="center"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/detail_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/poppins"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toBottomOf="@id/info_one"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:text="@string/company"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toBottomOf="@id/detail_company"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:text="@string/location"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toBottomOf="@id/detail_location"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        card_view:tabTextColor="@android:color/white"/>
    <androidx.viewpager2.widget.ViewPager2
        card_view:layout_constraintTop_toBottomOf="@id/tabs"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/view_pager"
        android:background="#141E27"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/progressBarStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>