<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    android:padding="10dp"
    android:background="@drawable/bg_item_user">

    <ImageView
        android:id="@+id/iv_avatar_org"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username_org"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/username_user"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toEndOf="@id/iv_avatar_org"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_org"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/name_user"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textStyle="bold"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/tv_username_org"
        card_view:layout_constraintStart_toEndOf="@id/iv_avatar_org"/>

    <TextView
        android:id="@+id/tv_location_org"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/location_user"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textStyle="bold"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toEndOf="@id/iv_avatar_org"
        card_view:layout_constraintTop_toBottomOf="@id/tv_name_org" />

</androidx.constraintlayout.widget.ConstraintLayout>